# snag

./: Cargo.toml  README.md
src/: cli.rs  main.rs
tests/: cli.rs
