[package]
name = "snag"
version = "0.1.0"
edition = "2021"
authors = ["Gbubemi Smith <gsmithwalter@gmail.com>"]

[lib]
path = "src/cli.rs"

[[bin]]
path = "src/main.rs"
name = "snag"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
native-tls = "0.2"
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.97"
assert_cmd = "2.0.16"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
